--- a/src/XelsDesktopWalletApp/Views/Pages/RestoreWalletPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/RestoreWalletPage.xaml
@@ -7,119 +7,128 @@
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages"
               xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="460" d:DesignWidth="800"
+      d:DesignHeight="500" d:DesignWidth="800"
       Title="RestoreWalletPage">
     <Border Margin="5,5,5,0" BorderBrush="Green" Background="White" BorderThickness="2" CornerRadius="10">
         <StackPanel Background="White" Margin="10,10,10,0">
 
 
-        <Border Margin="20 15" Width="731" Background="Green" CornerRadius="5">
-            <Label  Content="Restore a wallet" 
+            <Border Margin="20 15" Width="731" Background="Green" CornerRadius="5">
+                <Label  Content="Restore a wallet" 
                        HorizontalAlignment="Center"  
                        FontSize="20" FontWeight="Bold"
                     FontFamily="Microsoft YaHei Light" />
-        </Border>
-                  
-        <StackPanel>
+            </Border>
 
-            <!---  wallet name  -->
-            <Border Margin="200 0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+            <StackPanel x:Name="Restore_Stack_Panel">
 
-                    <Label Grid.Row="0" Content="Name" Padding="1 " Margin="5" FontSize="13" FontWeight="DemiBold" />
+                <!---  wallet name  -->
+                <Border Margin="200 0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                    <TextBox Grid.Row="1" x:Name="name"  materialDesign:HintAssist.Hint="Wallet Name"  materialDesign:HintAssist.IsFloating="False"
+                        <Label Grid.Row="0" Content="Name" Padding="1 " Margin="0 2" FontSize="13" FontWeight="DemiBold" />
+
+                        <TextBox Grid.Row="1" x:Name="name"  materialDesign:HintAssist.Hint="Wallet Name"  materialDesign:HintAssist.IsFloating="False"
                      Padding="5 " Margin="0 5"
                      AutomationProperties.HelpText="Enter a 
                      wallet name." 
                      TextBlock.FontFamily="Microsoft YaHei Light"
-                     BorderBrush="#FFAAAAAA" />
-                </Grid>
-            </Border>
+                     BorderBrush="#FFAAAAAA" TextChanged="Textbox_Null_check_OnKeyPress" />
+                        <Label Grid.Row="2" x:Name="walletName_ErrorMessage" Padding="2" Margin="2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden" />
+                    </Grid>
+                </Border>
 
-            <!--- date picker -->
-            <Border Margin="200 0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+                <!--- date picker -->
+                <Border Margin="200 0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                    <Label  Grid.Row="0"
+                        <Label  Grid.Row="0"
                        Content="Earliest Possible Creation Date" 
                         FontSize="13" FontWeight="DemiBold"
-                        Padding="1 " Margin="5" />
+                        Padding="1 " Margin="0 2" />
 
-                    <DatePicker Grid.Row="1"  x:Name="creationDate" 
+                        <DatePicker Grid.Row="1"  x:Name="creationDate" 
                        SelectedDate = "{x:Static sys:DateTime.Now}"
-                                 Padding="5 " Margin="0 5" />
-                </Grid>
-            </Border>
+                                 Padding="5" Margin="0 5" />
+                        <Label Grid.Row="2" x:Name="date_ErrorMessage" Padding="2" Margin="2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden" />
+                    </Grid>
+                </Border>
 
-            <!--- mnemonic -->
-            <Border Margin="200 0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+                <!--- mnemonic -->
+                <Border Margin="200 0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" Margin="0 5" Content ="Secret Words" 
+                        <Label Grid.Row="0" Margin="0 2" Content ="Secret Words" 
                       FontSize="13" FontWeight="DemiBold" Padding="1 " />
-                    <TextBox Grid.Row="1" x:Name="mnemonic" Margin="0 5" materialDesign:HintAssist.Hint="Enter your secret words."  materialDesign:HintAssist.IsFloating="False" 
-                     Padding="5 " BorderBrush="#FFAAAAAA" />
 
+                        <TextBox Grid.Row="1" x:Name="mnemonic" Margin="0 5" materialDesign:HintAssist.Hint="Enter your secret words."  materialDesign:HintAssist.IsFloating="False" 
+                     Padding="5 " BorderBrush="#FFAAAAAA" TextChanged="Textbox_Null_check_OnKeyPress" />
 
-                </Grid>
-            </Border>
+                        <Label Grid.Row="2" x:Name="mnemonic_ErrorMessage" Padding="2" Margin="2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden" />
 
-            <!--- password -->
-            <Border Margin="200 0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+                    </Grid>
+                </Border>
 
-                    <Label Grid.Row="0" Margin="0 5" Content="Password" FontSize="13" FontWeight="DemiBold" Padding="1 " />
-                    <PasswordBox Grid.Row="1" x:Name="password" Margin="0 5 "  materialDesign:HintAssist.Hint="Enter Password"  materialDesign:HintAssist.IsFloating="False" 
+                <!--- password -->
+                <Border Margin="200 0">
+                    <Grid>                        
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <Label Grid.Row="0" Margin="0,2" Content="Password" FontSize="13" FontWeight="DemiBold" Padding="1 " Grid.ColumnSpan="2" />
+                        <PasswordBox Grid.Row="1" x:Name="password" Margin="0,5,0,5"  materialDesign:HintAssist.Hint="Enter Password"  materialDesign:HintAssist.IsFloating="False" 
                      Padding="5" 
-                     BorderBrush="#FFAAAAAA" />
+                     BorderBrush="#FFAAAAAA" Grid.ColumnSpan="2"             PasswordChanged="Textbox_Null_check_OnKeyPress"  />
+                        <Label Grid.Row="2" x:Name="password_ErrorMessage" Padding="2" Margin="2,2,2,2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden" Grid.ColumnSpan="2" />
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-            <!--- pass phrase -->
-            <Border Margin="200 0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+                <!--- pass phrase -->
+                <Border Margin="200 0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
 
 
-                    <TextBlock Grid.Row="0" Margin="0 5" Text="Passphrase (optional)" FontSize="13" FontWeight="DemiBold" Padding="1" />
-                    <PasswordBox Grid.Row="1" x:Name="passphrase" 
+                        <TextBlock Grid.Row="0" Margin="0 2" Text="Passphrase (optional)" FontSize="13" FontWeight="DemiBold" Padding="1" />
+                        <PasswordBox Grid.Row="1" x:Name="passphrase" 
                              Padding="5 "  Margin="0 5"
                            materialDesign:HintAssist.Hint="Enter an optional Passphrase."  materialDesign:HintAssist.IsFloating="False" BorderBrush="#FFAAAAAA" />
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-            <!--- button -->
-            <Border Margin="200 10">
+                <!--- button -->
+                <Border Margin="200 10">
 
-                <Grid >
+                    <Grid >
 
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="2*" />
-                    </Grid.ColumnDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="2*" />
+                        </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" 
+                        <Button Grid.Column="0" 
                             x:Name="cancelButton" 
                         Click="CancelButton_Click" 
                        Margin="0 0 5 0"
@@ -131,15 +140,15 @@
                         Foreground="Green" 
                         BorderThickness="1,1,1,1" 
                         BorderBrush="Green" FontSize="14">
-                        <Button.Resources>
-                            <Style TargetType="Border">
-                                <Setter Property="CornerRadius" 
+                            <Button.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" 
                                     Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                    <Button Grid.Column="1" x:Name="restoreButton" 
+                        <Button Grid.Column="1" x:Name="restoreButton" 
                         Click="RestoreButton_Click" 
                             Margin="5 0 0 0"
                         Content="Restore" Padding="5" 
@@ -148,19 +157,19 @@
                         Foreground="White" 
                         BorderThickness="0,0,0,0"                         
                         FontSize="14">
-                        <Button.Resources>
-                            <Style TargetType="Border">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                            <Button.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                </Grid>
+                    </Grid>
 
-            </Border>
+                </Border>
+
+            </StackPanel>
 
         </StackPanel>
-       
-    </StackPanel>
     </Border>
 </Page>
