--- a/src/XelsDesktopWalletApp/Views/layout/MainLayout.xaml
+++ b/src/XelsDesktopWalletApp/Views/layout/MainLayout.xaml
@@ -174,9 +174,10 @@
         <Grid x:Name="GridBarraTitulo" Grid.ColumnSpan="2" Background="#FF41A43C" MouseDown="GridBarraTitulo_MouseDown">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10,0">
                 <Label x:Name="labCheckChainMessage"  Width="617" FontSize="14" Margin="0,0,200,0" Foreground="AliceBlue"/>
-                <Label x:Name="labWalletName" Content="wallatename" Margin="10,0,15,0" Width="100" FontSize="14" Foreground="AliceBlue"/>
+                <Label x:Name="labWalletName" Content="wallatename" Margin="10,0,5,0" Width="150" FontSize="14" Foreground="AliceBlue" 
+                        HorizontalContentAlignment="Right" />
 
-                <materialDesign:PopupBox PlacementMode="BottomAndAlignCentres" StaysOpen="False" Width="30">
+                <materialDesign:PopupBox PlacementMode="BottomAndAlignCentres" StaysOpen="False" Width="20">
                     <materialDesign:PopupBox.ToggleContent>
                         <materialDesign:PackIcon Kind="Settings" Foreground="White" />
                     </materialDesign:PopupBox.ToggleContent>
@@ -199,10 +200,10 @@
                 <!--<Button  x:Name="windowMax" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="30" Height="25" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="windowMax_Click" >
                     <materialDesign:PackIcon Kind="WindowMaximize" Foreground="Red" VerticalAlignment="Center" Width="20"/>
                 </Button>-->
-                <Button  x:Name="windowMin" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="30" Height="25" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="windowMin_Click">
+                <Button  x:Name="windowMin" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="20" Height="25" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="windowMin_Click">
                     <materialDesign:PackIcon Kind="WindowMinimize" Foreground="White" VerticalAlignment="Center" Width="20"/>
                 </Button>
-                <Button x:Name="ButtonFechar" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="34" Height="26" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="ButtonFechar_Click">
+                <Button x:Name="ButtonFechar" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="20" Height="26" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="ButtonFechar_Click">
                     <materialDesign:PackIcon Kind="CloseBold" Foreground="White" VerticalAlignment="Center"/>
                 </Button>
 
