--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
@@ -24,8 +24,13 @@
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" Content="Receive" HorizontalAlignment="Center" FontWeight="DemiBold" VerticalAlignment="Center"  VerticalContentAlignment="Center" FontSize="15"
                     RenderTransformOrigin="0.515,-0.184" Margin="0,0,0,0" Width="94" />
-                <Button Click="HidePopup_Click" Background="Black" Foreground="White"
-                                VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" >
+                <Button Click="HidePopup_Click" 
+                        Background="Red" Foreground="White"
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Right" Content="X"
+                        Height="15" Width="20"
+                                FontSize="10" Padding="7 0"
+                        HorizontalContentAlignment="Left">
 
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
@@ -61,7 +66,7 @@
                     </Button.Resources>
                 </Button>
                 <Frame  Grid.Row="2" Grid.RowSpan="4" x:Name="ReceiveContent" NavigationUIVisibility="Hidden" Margin="10,10,5,10" />
-               
+
                 <Button Grid.Row="7" x:Name="restoreButton" Click="restoreButton_Click" Content="OK"
                         Background="Green"
                         Foreground="White" Margin="10,24,10,25" >
