--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/LogoutConfirmUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/LogoutConfirmUserControl.xaml
@@ -9,41 +9,64 @@
     <Grid>
         <Rectangle Fill="#e9eeeb" Opacity=".8" MouseDown="Rectangle_MouseDown" />
 
-        <Border CornerRadius="10"  Background="White" Height="550" Width="700">
-            <Grid Margin="5,5,5,5">
+        <Border CornerRadius="10"  Background="White" Height="200" Width="700">
+            <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Margin="0,1" Width="313" Height="163" FontSize="20" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" Opacity="0.7"><Run/><LineBreak/><Run/><LineBreak/><Run/><LineBreak/><Run/><LineBreak/><Run Text="Are you sure you want to logout?"/></TextBlock>
-                <TextBlock Text="Be aware that this will also Stop the stacking process."  FontSize="15"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <Button x:Name="closeBtn" Click="closeBtn_Click"  Background="Red" Foreground="White"
+
+                <Border Grid.Row="0">
+                    <Grid >
+                        <TextBlock FontSize="20" HorizontalAlignment="Center" 
+                                   Margin="0 10 0 0"
+                                   FontWeight="SemiBold" 
+                Text="Are you sure you want to logout?"/>
+
+                        <TextBlock Text="Be aware that this will also Stop the staking process."  FontSize="15"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Button x:Name="closeBtn" Click="closeBtn_Click"  Background="Red" Foreground="White"
                                 VerticalAlignment="Top" HorizontalAlignment="Right" Content="X"  Height="15" Width="20" FontSize="10" Padding="7 0" HorizontalContentAlignment="Left" >
 
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="50"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Button  Grid.Row="1" Content="CANCEL" Click="cancelButton_Click"
-                        Background="Red" Foreground="White" RenderTransformOrigin="0.174,0.571" 
-                        FontWeight="Normal" Margin="150,4,346,14">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Button  Grid.Row="1" Content="LOGOUT" Click="logoutButton_Click"
-                        Background="Green"   Foreground="White" FontWeight="Normal" Margin="344,4,116,14" >
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="50"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+                    </Grid>
+                </Border>
+                <Border Grid.Row="01">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" Content="CANCEL" Click="cancelButton_Click"
+                        Background="Red" Foreground="White" Margin="100 0 10 0" RenderTransformOrigin="0.174,0.571" 
+                        FontWeight="Normal" HorizontalAlignment="Right">
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="15"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+
+                        <Button Grid.Column="1" Content="LOGOUT" Click="logoutButton_Click"
+                        Background="Green" 
+                                Margin="10 0 10 0" 
+                                Foreground="White"
+                                HorizontalAlignment="Left"
+                                FontWeight="Normal" >
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+
+                    </Grid>
+                </Border>
+
 
             </Grid>
         </Border>
