--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/DisplayMessageUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/DisplayMessageUserControl.xaml
@@ -8,7 +8,7 @@
     <!--d:DesignHeight="450" d:DesignWidth="800"-->
     <Grid>
         <Rectangle Fill="White" Opacity=".7" MouseDown="Rectangle_MouseDown" />
-        <Border CornerRadius ="10" Background="LightGreen" Height="100" Width="350" BorderBrush="Green" BorderThickness="6">
+        <Border CornerRadius ="8" Background="LightGreen" Height="100" Width="350" BorderBrush="Green" BorderThickness="3">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -16,11 +16,11 @@
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Foreground="Black"   TextWrapping="Wrap" />
 
-                <Button Grid.Row="1" HorizontalAlignment="Right" Name="Close_Modal" Background="#f5857d" Foreground="White" Height="20" Width="25" FontSize="10" Padding=" 0 3" Margin="15 5"
-                        Click="Button_Close_Modal">X</Button>
+                <Button Grid.Row="1" HorizontalAlignment="Left" Name="Close_Modal" Background="#f5857d" Foreground="White" Height="20" Width="51" FontSize="10" Padding=" 0 3" Margin="278,13,0,14"
+                        Click="Button_Close_Modal">Ok</Button>
             </Grid>
         </Border>
-        
-        
+
+
     </Grid>
 </UserControl>
